--- a/app/views/account/new.html.erb
+++ b/app/views/account/new.html.erb
@@ -2,9 +2,6 @@
     <label>Name: </label><br>
     <%= text_field_tag :'register[name]' %><br>
 
-    <label>Age: </label><br>
-    <%= text_field_tag :'register[age]' %><br>
-
     <label>Email: </label><br>
     <%= text_field_tag :'register[email]' %><br>
    
@@ -14,4 +11,6 @@
     <%= submit_tag "Register" %>
 <% end %>
 
+
+<!-- ('/account', method: 'get') -->
 <div><a href= "/" >Back</a></div>
