--- a/app/views/gmap/map.html.erb
+++ b/app/views/gmap/map.html.erb
@@ -5,12 +5,13 @@
       var myCoords = new google.maps.LatLng(lat, lng);
       var mapOptions = {
       center: myCoords,
-      zoom: 3
+      zoom: 5,
       };
       var map = new google.maps.Map(document.getElementById('map'), mapOptions);
       var marker = new google.maps.Marker({
           position: myCoords,
-          map: map
+          map: map,
+          animation: google.maps.Animation.DROP
       });
   }
     document.addEventListener("DOMContentLoaded", function(){
@@ -19,6 +20,4 @@
     </script>
   <% end %>
 
-  <p>
-    <div id="map"></div>
-</p>
+  <div id="map"></div>
