--- a/app/assets/stylesheets/map.scss
+++ b/app/assets/stylesheets/map.scss
@@ -2,4 +2,70 @@
     position:absolute;
     width:100%;
     height:100%;
+    margin-top: -8px;
+    margin-left: -8px;
+    z-index: -20;
+}
+
+#over_map {
+    position: absolute;
+    top: 10px; 
+    margin: 0 auto; 
+    z-index: 10;
+}
+
+#first_lay {
+    height: 50px;
+    width: 370px;
+    outline: none;
+    outline-width: 0;
+    margin-top: 40px;
+    border-radius: 25px;
+    border-style: offset;
+    border-color: black;
+    color: white;
+    border: 3px;
+    background:rgba(0,0,0,0.1);
+    background-position: center;
+}
+
+.fullscreen {
+    position: relative;
+    width: 100%;
+    height: 100%;
+}
+
+#search {
+    padding-left: 20px;
+    padding-right: 20px;
+    float: left;
+    margin: 3px;
+    font-family: Verdana;
+    outline: none;
+    outline-width: 0;
+    height: 45px;
+    width: 245px;
+    border-radius: 25px;
+    border-style: offset;
+    color: white;
+    border: 3px;
+    background: rgba(0,0,0,0.3);
+    position: absolute;
+    background-position: center;
+}
+
+#scr_btn {
+    float: right;
+    margin: 3px;
+    font-family: Verdana;
+    outline: none;
+    outline-width: 0;
+    height: 45px;
+    width: 75px;
+    color: white;
+    border-radius: 25px;
+    border-style: offset;
+    border: 3px;
+    background:rgba(0,0,0,0.3);
+    background-position: center;
 }
