--- a/app/views/account/new.html.erb
+++ b/app/views/account/new.html.erb
@@ -1,16 +1,27 @@
-<%= form_tag '/account' do %>
-    <label>Name: </label><br>
-    <%= text_field_tag :'register[name]' %><br>
-
-    <label>Email: </label><br>
-    <%= text_field_tag :'register[email]' %><br>
-   
-    <label>Password: </label><br>
-    <%= text_field_tag :'register[password]' %><br>
-   
-    <%= submit_tag "Register" %>
+<div id="close">
+    <%= link_to image_tag("login/close.jpg", :id=>"close_btn"), "/" %>
+</div>
+<div id="login">
+    <%= image_tag("login/google.png", :alt => "Google") %>
+    <%= form_tag account_create_path do %>
+    <% if @user %>
+        <% if @user.errors.any? %>
+            <script>
+                var errors = <%= raw @user.errors.full_messages.to_json %>
+                var messages = "Error Messages:\n";
+                for(var i = 0; i < errors.length; i++){
+                    messages += (i+1).valueOf()+". "+errors[i]+"\n"
+                }
+                alert(messages);
+            </script>
+        <% end %>
+    <% end %>
+    <%= text_field_tag 'name',nil, placeholder: 'Name', type: "text" %><br>
+    <%= text_field_tag 'email',nil, placeholder: 'Email', type: "text" %><br>
+    <%= text_field_tag 'password',nil, placeholder: 'password', type: "password" %><br>
+    <%= submit_tag "Register",:id=>"login_btn", :style=>"margin-bottom" %>
 <% end %>
+</div>
 
 
 <!-- ('/account', method: 'get') -->
-<div><a href= "/" >Back</a></div>
