--- a/app/views/menu/menu.html.erb
+++ b/app/views/menu/menu.html.erb
@@ -1,5 +1,5 @@
 <div><a href='/logout'>Logout</a></div>
 <div><a href="/gmap">Google Maps</a></div>
-<div><a href="">Neighbourhood Chat</a></div>
+<div><a href="/account_menu/chats">Neighbourhood Chat</a></div>
 
 logout_path
