--- a/app/views/chat/new.html.erb
+++ b/app/views/chat/new.html.erb
@@ -6,5 +6,5 @@
     <% end %>
     <%= text_field_tag 'title',nil, placeholder: 'Title', type: "text" %><br>
     <%= text_field_tag 'message',nil, placeholder: 'Message', type: "text" %><br>
-    <%= submit_tag "Start Chat",:id=>"start_btn", :style=>"margin-bottom" %>
+    <%= submit_tag "Create New Topic",:id=>"start_btn", :style=>"margin-bottom" %>
 <% end %>
