--- a/app/views/account/new.html.erb
+++ b/app/views/account/new.html.erb
@@ -1,3 +1,4 @@
+<%= stylesheet_link_tag "login/login" %>
 <div id="close">
     <%= link_to image_tag("login/close.jpg", :id=>"close_btn"), "/" %>
 </div>
