--- a/app/views/menu/menu.html.erb
+++ b/app/views/menu/menu.html.erb
@@ -1,5 +1,6 @@
 <div><a href='/logout'>Logout</a></div>
 <div><a href="/gmap">Google Maps</a></div>
 <div><a href="/account_menu/chats">Neighbourhood Chat</a></div>
+<div><a href="/account_menu/business">Google Business<a></div>
 
 logout_path
