--- a/app/assets/stylesheets/maps/map.scss
+++ b/app/assets/stylesheets/maps/map.scss
@@ -67,3 +67,13 @@
     background:rgba(0,0,0,0.3);
     background-position: center;
 }
+
+#close_btn {
+    width: 20px;
+    height: 20px;
+    right: 20px;
+    top: 20px;
+    margin-top: -30px;
+    margin-left: 90%;
+    padding: 35px;
+}
