--- a/app/views/chat/new.html.erb
+++ b/app/views/chat/new.html.erb
@@ -1,10 +1,17 @@
-<%= form_tag account_menu_chat_new_path do %>
+<%= stylesheet_link_tag "chat/newchat" %>
+<%= link_to image_tag("login/close.jpg", :id=>"close_btn"), account_menu_chats_path %>
+<%= image_tag("chat/google_icon.jpg", :alt => "Google", id: 'glogo') %>
+<h4 id="identity">Chat</h4>
+<a id="top">New Topic</a>
+<div id="nt_prt">
+    <%= form_tag account_menu_chat_new_path do %>
     <% if @error != nil%>
         <script>
             alert(<%= raw @error.to_json %>)
         </script>
     <% end %>
-    <%= text_field_tag 'title',nil, placeholder: 'Title', type: "text" %><br>
-    <%= text_field_tag 'message',nil, placeholder: 'Message', type: "text" %><br>
-    <%= submit_tag "Create New Topic",:id=>"start_btn", :style=>"margin-bottom" %>
+    <%= text_field_tag 'ntitle',nil, placeholder: 'Title', type: "text" %><br>
+    <%= text_field_tag 'nmessage',nil, placeholder: 'Message', type: "text" %><br>
+    <%= submit_tag "Create New Topic",:id=>"create_btn", :style=>"margin-bottom" %>
 <% end %>
+</div>
