--- a/app/views/chat/participants.html.erb
+++ b/app/views/chat/participants.html.erb
@@ -1,1 +1,29 @@
-<%= @allUsers %>
+<%= stylesheet_link_tag "chat/participants" %>
+<%= link_to image_tag("login/close.jpg", :id=>"close_btn"), account_menu_chats_path %>
+<%= image_tag("chat/google_icon.jpg", :alt => "Google", id: 'glogo') %>
+<h4 id="identity">Chat</h4>
+<a id="top"><%= params[:title] %>  | Participants</a>
+<div id="nt_prt">
+    <% @allUsers.each do |user| %>
+        <% if user[:name] == @admin.name %>
+            <div class="show">
+                <a class="show_user"><%= user[:name] %> - <%= user[:email] %> (Admin)</a>
+                <%= link_to image_tag("chat/active_user.png", :id=>"block_btn"), chatuserblock_path(:id => @params[:id],:title => @params[:title],:name => user[:name],:location => Chat.find_by(id: @params[:id]).location) %>
+            </div>
+        <% else %>
+            <div class="show">
+                <% active = true %>
+                <% @inactive.each do |userr| %>
+                    <% active = false if userr.id == user[:id]%>
+                <% end %>
+                <% if active == true %>
+                    <a class="show_user"><%= user[:name] %> - <%= user[:email] %></a>
+                    <%= link_to image_tag("chat/active_user.png", :id=>"block_btn"), chatuserblock_path(:id => @params[:id],:title => @params[:title],:name => user[:name],:location => Chat.find_by(id: @params[:id]).location, :active => true) %>
+                <% else %>
+                    <a class="show_user"><%= user[:name] %> - <%= user[:email] %></a>
+                    <%= link_to image_tag("chat/inactive_user.png", :id=>"block_btn"), chatuserblock_path(:id => @params[:id],:title => @params[:title],:name => user[:name],:location => Chat.find_by(id: @params[:id]).location, :active => false) %>
+                <% end %>
+            </div>
+        <% end %>
+    <% end %>
+</div>
