--- a/app/assets/stylesheets/maps/map.scss
+++ b/app/assets/stylesheets/maps/map.scss
@@ -10,7 +10,6 @@
 #over_map {
     position: absolute;
     top: 10px; 
-    margin: 0 auto; 
     z-index: 10;
 }
 
@@ -24,6 +23,7 @@
     border-color: black;
     color: white;
     border: 3px;
+    margin-left: 200px;
     background:rgba(0,0,0,0.1);
     background-position: center;
 }
