--- a/app/assets/stylesheets/chat/participants.scss
+++ b/app/assets/stylesheets/chat/participants.scss
@@ -10,6 +10,7 @@
 }
 
 #show {
+    width: 800px;
     display: inline-block;
 }
 
@@ -17,5 +18,5 @@
     margin: 0;
     height: 50px;
     width: 50px;
-    display: inline-flex;
+    display: inline-block;
 }
