--- a/app/views/business/add_biz.html.erb
+++ b/app/views/business/add_biz.html.erb
@@ -1,10 +1,10 @@
 <%= stylesheet_link_tag "business/newbiz" %>
-<%= link_to image_tag("login/close.jpg", :id=>"close_btn"), account_menu_chats_path %>
+<%= link_to image_tag("login/close.jpg", :id=>"close_btn"), selectbizz_path %>
 <%= image_tag("chat/google_icon.jpg", :alt => "Google", id: 'glogo') %>
 <h4 id="identity">Business</h4>
 <div id="nt_prt">
     <a id="biztitle">New Business</a>
-    <%= form_tag addbizz_path do %>
+    <%= form_tag account_menu_business_new_path do %>
         <% if @error %>
             <script>
                 alert(raw <%= @error.to_json %>)
