--- a/app/views/business/edit_biz.html.erb
+++ b/app/views/business/edit_biz.html.erb
@@ -1,13 +1,18 @@
 <%= stylesheet_link_tag "business/newbiz" %>
-<%= link_to image_tag("login/close.jpg", :id=>"close_btn"), account_menu_chats_path %>
+<%= link_to image_tag("login/close.jpg", :id=>"close_btn"), selbizz_path([@business.name],[@business.address]) %>
 <%= image_tag("chat/google_icon.jpg", :alt => "Google", id: 'glogo') %>
 <h4 id="identity">Business</h4>
 <div id="nt_prt">
+    <% if @error %>
+        <script>
+            alert(<%= raw @error.to_json %>)
+        </script>
+    <% end %>
     <a id="biztitle"><%= @business.name%></a>
     <%= form_tag updatebiz_path do %>
-        <%= text_field_tag 'nbname',nil, value: @business.name, :class => 'enterbiz', type: "text" %><br>
-        <%= text_field_tag 'nbaddress',nil, value: @business.address, :class => 'enterbiz', type: "text" %><br>
-        <%= text_field_tag 'nbtype',nil, value: @business.biztype, :class => 'enterbiz', type: "text" %><br>
+        <%= text_field_tag 'nbname',nil,placeholder: 'Name',value: @business.name, :class => 'enterbiz', type: "text" %><br>
+        <%= text_field_tag 'nbaddress',nil, placeholder: 'Address',value: @business.address, :class => 'enterbiz', type: "text" %><br>
+        <%= text_field_tag 'nbtype',nil,placeholder: 'Type',value: @business.biztype, :class => 'enterbiz', type: "text" %><br>
         <%= hidden_field_tag "id", @business.id %>
         <%= submit_tag "Update Business",:class=>"biz"%>
     <% end %>
