--- a/app/views/menu/menu.html.erb
+++ b/app/views/menu/menu.html.erb
@@ -1,14 +1,14 @@
 <%= image_tag("chat/google_icon.jpg", :alt => "Google", id: 'glogo') %>
 <h4 id="identity">Menu</h4>
 
+<div>
+    <script async src="https://cse.google.com/cse.js?cx=012168581418490882640:zr42mxxrbdb"></script>
+    <div class="gcse-search"></div>
+</div>
+
 <%= form_tag logout_path, method: :get do %>
         <%= submit_tag "Logout",:class=>"logout"%>
 <% end %>
-
-<div class="google-border">
-    <%= image_tag("chat/google_icon.jpg", :alt => "Search", id: 'glogo') %>
-    <div class="gservice"><a href="account_menu/gsearch">Google Search<a></div>
-</div>
 
 <div class="google-border">
     <%= image_tag("menu/map_search.png", :alt => "Map", id: 'glogo') %>
